recursion.lessons.recursion.koch.Koch.scala.error
Koch:21: error: not found: value snowFlake
		snowFlake(getParam(0).asInstanceOf[Int],getParam(1).asInstanceOf[Double]);
                ^